# pydownloader

./: .gitignore  config.ini.example  pyproject.toml
.github/workflows/: python-app.yml
docs/: SPECIFICATION.md
src/pydownloader/: config.py
tests/: test_config.py  test_daemon.py  test_scheduler.py
